--- a/fe-app/src/index.scss
+++ b/fe-app/src/index.scss
@@ -8,6 +8,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: transparent;
+    letter-spacing: 0.1px,
 }
 
 code {
