update form add request for user

--- a/fe-app/src/index.scss
+++ b/fe-app/src/index.scss
@@ -3,8 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif, Playfair Display, Georgia, Cambria, Times New Roman, Times;
+    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: transparent;
